# CMakeList.txt : CMake project for Tracer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.6)

project(Tracer)

# Add source to this project's executable.
add_executable (Tracer "Tracer.cpp" "Tracer.h")

# TODO: Add tests and install targets if needed.
